--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Silliest Games</title>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2789944121645254"
-     crossorigin="anonymous"></script>
+  <meta name="google-adsense-account" content="ca-pub-2789944121645254">
 </head>
 <body>
   <a href="draw_clouds">DRAW CLOUDS</a>
