--- a/draw_clouds/index.html
+++ b/draw_clouds/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="styles.css">
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2789944121645254"
-     crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/93b7fa89ab.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
@@ -18,6 +17,7 @@
 
     </canvas>
     <div id="toolbar">
+<div id="colors">
       <button id="darkred"></button>
       <button id="red"></button>
       <button id="orangered"></button>
@@ -38,11 +38,14 @@
       <button id="gray"></button>
       <button id="black"></button>
       <button id="white"></button>
-      <button id="undo">UNDO</button>
-      <button id="clear">CLEAR</button>
     </div>
-    <button id="new-cloud">New</button>
-    <button id="download">Download</button>
+    <div class="tools">
+      <button title="Undo" id="undo"><i class="fa-solid fa-arrow-rotate-left"></i></button>
+      <button title="Clear drawing" id="clear"><i class="fa-solid fa-trash-can"></i></button>
+      <button title="New cloud" id="new-cloud"><i class="fa-solid fa-arrow-right"></i></button>
+      <button title="Download drawing" id="download"><i class="fa-solid fa-file-arrow-down"></i></button>
+    </div>
+    </div>
   </main>
   <footer>
 
