--- a/drawonclouds/index.html
+++ b/drawonclouds/index.html
@@ -40,6 +40,7 @@
       <button id="white"></button>
     </div>
     <div class="tools">
+      <button title="Eraser" id="eraser"><i class="fa-solid fa-eraser"></i></i></button>
       <button title="Undo" id="undo"><i class="fa-solid fa-arrow-rotate-left"></i></button>
       <button title="Clear drawing" id="clear"><i class="fa-solid fa-trash-can"></i></button>
       <button title="New cloud" id="new-cloud"><i class="fa-solid fa-arrow-right"></i></button>
