--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <meta name="google-adsense-account" content="ca-pub-2789944121645254">
 </head>
 <body>
-  <a href="draw_clouds">DRAW CLOUDS</a>
+  <a href="drawonclouds">DRAW CLOUDS</a>
 </body>
 </html>
