Add highlighting of non-color options

--- a/drawonclouds/index.html
+++ b/drawonclouds/index.html
@@ -39,7 +39,7 @@
       <button id="black"></button>
       <button id="white"></button>
     </div>
-    <div class="tools">
+    <div id="tools">
       <button title="Eraser" id="eraser"><i class="fa-solid fa-eraser"></i></i></button>
       <button title="Undo" id="undo"><i class="fa-solid fa-arrow-rotate-left"></i></button>
       <button title="Clear drawing" id="clear"><i class="fa-solid fa-trash-can"></i></button>
