--- a/drawonclouds/index.html
+++ b/drawonclouds/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Draw On Clouds</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="img/icon.png">
   <script src="https://kit.fontawesome.com/93b7fa89ab.js" crossorigin="anonymous"></script>
 </head>
 <body>
