add coffee donation

--- a/drawonclouds/index.html
+++ b/drawonclouds/index.html
@@ -50,7 +50,7 @@
     </div>
   </main>
   <footer>
-
+    <a href="https://buymeacoffee.com/silliestgames" target="_blank"><img src="img/coffee-icon.png"> Buy me a coffee</button>
   </footer>
   <script src="script.js"></script>
 </body>
